added recipe api call

--- a/recipes.html
+++ b/recipes.html
@@ -14,21 +14,26 @@
 
 <body>
     <div class="container">
-        <div class="col-md-offset-2 col-md-8">
-            <h1>recipes</h1>
-            <div class="col-md-6">
-                <div class="list-group-item">
-                    
+        <div class="row">
+            <div class="col-md-offset-2 col-md-8">
+                <h1>recipes</h1>
+            </div>                        
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="list-group-item">
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2">
-                <h2>dshadsihads</h2>                    
+                <div class="col-md-2">
+                    <h2>dshadsihads</h2>                    
+                </div>
             </div>
         </div>
     </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>  
+  <script type="text/javascript" src="./assets/api.js"></script>    
   <script type="text/javascript" src="./assets/script.js"></script>
 </body>
 
